@@ -1,0 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+<strings>
+    <string id="30000">General</string>
+    <string id="30001">Show teasers below shows</string>
+</strings>
